--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "ms": "^2.1.3",
+    "parse-ms-2": "^1.0.0",
     "skylander.js": "^1.0.4"
   }
 }
