--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skylands-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "![Alt text](https://static.wikia.nocookie.net/skylanders/images/0/00/Skylanders_Logo.png/revision/latest?cb=20200327134807)",
   "main": "src/bot.js",
   "scripts": {
     "test": "node ."
