--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^1.7.0",
     "@discordjs/rest": "^2.2.0",
+    "@sapphire/shapeshift": "^3.9.6",
     "chalk": "^4.1.2",
     "discord-api-types": "^0.37.69",
     "discord.js": "^14.14.1",
